fixed spacing

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -13,22 +13,22 @@
 @define-color yellow #f1fa8c;
 
 * {
-    border: none;
-    border-radius: 0px;
-    font-family: mononoki Nerd Font Mono;
-    font-size: 12px;
-    min-height: 0;
+  border: none;
+  border-radius: 0px;
+  font-family: mononoki Nerd Font Mono;
+  font-size: 12px;
+  min-height: 0;
 }
 
 window#waybar {
-    background-color: transparent;
-    color: @foreground;
-    transition-property: background-color;
-    transition-duration: .5s;
+  background-color: transparent;
+  color: @foreground;
+  transition-property: background-color;
+  transition-duration: .5s;
 }
 
 window#waybar.hidden {
-    opacity: 0.2;
+  opacity: 0.2;
 }
 
 tooltip {
@@ -41,35 +41,34 @@ tooltip label {
 
 #window,
 #workspaces {
-    margin: 0px 4px;
+  margin: 0px 4px;
 }
 
 /* If workspaces is the leftmost module, omit left margin */
 .modules-left > widget:first-child > #workspaces {
-    margin-left: 0px;
+  margin-left: 0px;
 }
 
 /* If workspaces is the rightmost module, omit right margin */
 .modules-right > widget:last-child > #workspaces {
-    margin-right: 0px;
+  margin-right: 0px;
 }
 
 #workspaces button {
-    background: @background;
-    color: @foreground;
-    border-radius: 20px;
-
+  background: @background;
+  color: @foreground;
+  border-radius: 20px;
 }
 
 #workspaces button.focused {
   border-color: @selection;
-  color: @purple;  
+  color: @purple;
   background-color: @selection;
 }
 
 #workspaces button.urgent {
-    background-color: @red;
-    color: @foreground;
+  background-color: @red;
+  color: @foreground;
 }
 
 #custom-power {
@@ -81,17 +80,17 @@ tooltip label {
 }
 
 #tray {
-    color: @foreground;
+  color: @foreground;
 }
 
 #tray > .passive {
-    -gtk-icon-effect: dim;
-    color: @foreground;
+  -gtk-icon-effect: dim;
+  color: @foreground;
 }
 
 #tray > .needs-attention {
-    -gtk-icon-effect: highlight;
-    color: @foreground;
+  -gtk-icon-effect: highlight;
+  color: @foreground;
 }
 
 #custom-weather {
@@ -106,8 +105,8 @@ tooltip label {
   color: @red;
 }
 
-#bluetooth {
-  color: @green;
+#bluetooth.disabled {
+  color: @red;
 }
 
 #bluetooth.off {
@@ -145,15 +144,19 @@ tooltip label {
 }
 
 #network {
-    color: @green;
+  color: @green;
 }
 
 #network.disconnected {
-    color: @red;
+  color: @red;
+}
+
+#network.disabled {
+  color: @red;
 }
 
 #cpu {
-    color: @orange;
+  color: @orange;
 }
 
 #cpu.warning {
@@ -167,15 +170,15 @@ tooltip label {
 }
 
 #temperature {
-    color: @orange;
+  color: @orange;
 }
 
 #temperature.critical {
-    color: @red
+  color: @red
 }
 
 #memory {
-    color: @pink;
+  color: @pink;
 }
 
 #memory.critical {
@@ -185,29 +188,29 @@ tooltip label {
 }
 
 #pulseaudio {
-    color: @purple;
+  color: @purple;
 }
 
 #pulseaudio.muted {
-    color: @red;
+  color: @red;
 }
 
 #clock {
-    color: @yellow;
+  color: @yellow;
 }
 
 #battery {
-    color: @cyan;
+  color: @cyan;
 }
 
 #battery.charging, #battery.plugged {
-    color: @green;
+  color: @green;
 }
 
 @keyframes blink {
-    to {
-        color: @foreground;
-    }
+  to {
+    color: @foreground;
+  }
 }
 
 #battery.warning:not(.charging) {
@@ -216,15 +219,15 @@ tooltip label {
 }
 
 #battery.critical:not(.charging) {
-    background-color: @red;
-    color: @background;
-    animation-name: blink;
-    animation-duration: 0.5s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
+  background-color: @red;
+  color: @background;
+  animation-name: blink;
+  animation-duration: 0.5s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
 }
 
 label:focus {
-    background-color: @background;
+  background-color: @background;
 }
